// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototype/Message Audio 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f65b6d;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c1 {
  color: #fff;
}

.c6 .c1 {
  color: #6e849a;
}

.c7 .c1 {
  display: inline-block;
  margin-left: 12px;
}

.c4 {
  position: relative;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  color: #132144;
  text-align: left;
  word-break: break-word;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 8px;
}

.c0 > .c1 {
  margin-right: 8px;
  margin-bottom: 2px;
}

.c0 .c3 {
  border-bottom-left-radius: 5px;
}

<div
  className="c0"
>
  <span
    className="c1 c2"
    color="#f65b6d"
    size={16}
  >
    <svg
      data-file-name="SvgVolume"
    />
  </span>
  <div
    className=""
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="c3 c4"
    >
      jamjam.mp3
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototype/Message Debug 1`] = `
.c3 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6b95e9;
}

.c3 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c6 .c2 {
  color: #fff;
}

.c7 .c2 {
  color: #6e849a;
}

.c8 .c2 {
  display: inline-block;
  margin-left: 12px;
}

.c5 {
  position: relative;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  color: #132144;
  text-align: left;
  word-break: break-word;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 8px;
}

.c0 > .c2 {
  margin-right: 8px;
  margin-bottom: 2px;
}

.c0 .c4 {
  border-bottom-left-radius: 5px;
}

.c9 > .c2 {
  margin-bottom: 2px;
  margin-left: 8px;
}

.c9 .c4 {
  border-bottom-right-radius: 5px;
}

.c1 .c4 {
  white-space: pre;
  background: #eef4f6;
}

.c1 .c4 p {
  margin-bottom: 0;
}

<div
  className="c0 c1"
>
  <span
    className="c2 c3"
    color="#6b95e9"
    size={16}
  >
    <svg
      data-file-name="SvgVar"
    />
  </span>
  <div
    className=""
    style={
      Object {
        "display": "inline",
      }
    }
    title="10"
  >
    <div
      className="c4 c5"
    >
      <span>
        <strong>
          this
        </strong>
         is in 
        <code>
          markdown
        </code>
         so 
        <em>
          you
        </em>
         can 
        <del>
          format
        </del>
         it
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototype/Message Loading 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1em;
  height: 1em;
  border-radius: 50%;
  font-size: 4rem;
  line-height: 1;
  background-color: #fff;
  background-image: url('/loader-2.svg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 75%;
  -webkit-animation: spin 1s linear infinite;
  animation: spin 1s linear infinite;
}

.c6 .c1 {
  color: #fff;
}

.c7 .c1 {
  color: #6e849a;
}

.c8 .c1 {
  display: inline-block;
  margin-left: 12px;
}

.c4 {
  position: relative;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  color: #132144;
  text-align: left;
  word-break: break-word;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 8px;
}

.c0 > .c1 {
  margin-right: 8px;
  margin-bottom: 2px;
}

.c0 .c3 {
  border-bottom-left-radius: 5px;
}

.c9 > .c1 {
  margin-bottom: 2px;
  margin-left: 8px;
}

.c9 .c3 {
  border-bottom-right-radius: 5px;
}

.c10 .c3 {
  white-space: pre;
  background: #eef4f6;
}

.c10 .c3 p {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <span
    className="c1 c2"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgAlexa"
    />
  </span>
  <div
    className=""
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="c3 c4"
    >
      <span
        className="c5"
        style={
          Object {
            "backgroundSize": "100%",
            "display": "block",
            "fontSize": "22px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototype/Message Speak 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c6 .c1 {
  color: #fff;
}

.c7 .c1 {
  color: #6e849a;
}

.c8 .c1 {
  display: inline-block;
  margin-left: 12px;
}

.c4 {
  position: relative;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  color: #132144;
  text-align: left;
  word-break: break-word;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 8px;
}

.c0 > .c1 {
  margin-right: 8px;
  margin-bottom: 2px;
}

.c0 .c3 {
  border-bottom-left-radius: 5px;
}

.c9 > .c1 {
  margin-bottom: 2px;
  margin-left: 8px;
}

.c9 .c3 {
  border-bottom-right-radius: 5px;
}

.c5 {
  width: 100%;
  color: #62778c;
}

<div
  className="c0"
>
  <span
    className="c1 c2"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgAlexa"
    />
  </span>
  <div
    className=""
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        Justin
      </div>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error eum fugit labore natus omnis quaerat quos ut voluptates. Accusamus delectus exercitationem ipsam ipsum itaque modi nesciunt non officiis saepe voluptates!
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototype/Message Standard 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c1 {
  color: #fff;
}

.c6 .c1 {
  color: #6e849a;
}

.c7 .c1 {
  display: inline-block;
  margin-left: 12px;
}

.c4 {
  position: relative;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  color: #132144;
  text-align: left;
  word-break: break-word;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 15px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 8px;
}

.c0 > .c1 {
  margin-right: 8px;
  margin-bottom: 2px;
}

.c0 .c3 {
  border-bottom-left-radius: 5px;
}

<div
  className="c0"
>
  <span
    className="c1 c2"
    color="currentColor"
    size={16}
  >
    <svg
      data-file-name="SvgApi"
    />
  </span>
  <div
    className=""
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="c3 c4"
    >
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error eum fugit labore natus omnis quaerat quos ut voluptates. Accusamus delectus exercitationem ipsam ipsum itaque modi nesciunt non officiis saepe voluptates!
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototype/Message User 1`] = `
.c2 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6b95e9;
}

.c2 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c1 {
  color: #fff;
}

.c6 .c1 {
  color: #6e849a;
}

.c7 .c1 {
  display: inline-block;
  margin-left: 12px;
}

.c4 {
  position: relative;
  max-width: 100%;
  padding: 0.5rem;
  overflow: hidden;
  color: #132144;
  text-align: left;
  word-break: break-word;
  background-color: #fff;
  border: 1px solid #dee2e6;
  border-radius: 15px;
}

.c8 > .c1 {
  margin-right: 8px;
  margin-bottom: 2px;
}

.c8 .c3 {
  border-bottom-left-radius: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 8px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 > .c1 {
  margin-bottom: 2px;
  margin-left: 8px;
}

.c0 .c3 {
  border-bottom-right-radius: 5px;
}

<div
  className="c0"
>
  <span
    className="c1 c2"
    color="#6b95e9"
    size={16}
  >
    <svg
      data-file-name="SvgUser"
    />
  </span>
  <div
    className=""
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="c3 c4"
    >
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error eum fugit labore natus omnis quaerat quos ut voluptates. Accusamus delectus exercitationem ipsam ipsum itaque modi nesciunt non officiis saepe voluptates!
    </div>
  </div>
</div>
`;
